# data-science

customer-segmentation/: README.md  eda.py  model.py  preprocess.py  pyproject.toml  requirements.txt  train_processed.csv
