[project]
name = "contourpy==1-2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "jessc",email = "jess.cichon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "contourpy==1"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
